fix: добавлена передача url миски и лежанки по websocket для питомца
